# async_cource

./: .gitignore  Makefile  README.md  alembic.ini  end_day.py  pyproject.toml  run_worker.py
alembic/: env.py
alembic/versions/: 2023-08-11_init.py  2023-08-12_auth.py  2023-08-13_tasks.py  2023-08-20_accounting_tasks.py  2023-08-20_accounting_user_balance.py  2023-08-20_accounting_users.py  2023-08-20_audit_log.py  2023-08-20_transactions_and_balance.py  2023-08-20_transactions_type.py
scripts/: start-dev.sh
src/: database.py  events.py  main.py  run_worker.py  schema_generator.py
src/accounting/: auth_consumer.py  end_day_script.py  log.py  models.py  tasks_biz_consumer.py
src/auth/: models.py  router.py
src/schemas/accounting/transaction_applied/: 1.json
src/schemas/auth/user_created/: 1.json
src/schemas/auth/user_role_changed/: 1.json
src/schemas/tasks/task_added/: 1.json
src/schemas/tasks/task_assigned/: 1.json
src/schemas/tasks/task_created/: 1.json
src/schemas/tasks/task_done/: 1.json
src/schemas/tasks/task_updated/: 1.json
src/tasks/: auth_consumer.py  log.py  models.py  router.py
tests/: conftest.py
tests/e2e/: test_auth.py  test_scenarios.py
tests/services/: test_auth.py  test_tasks.py
